--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "engines": {
     "node": ">=20.0.0"
