--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@remix-run/dev": "^2.5.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.20",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^5.1.4"
